--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 spring.application.name=Gym-J
 
-spring.datasource.username=jens
-spring.datasource.password=x
+spring.datasource.username=root
+spring.datasource.password=1234
 spring.datasource.url=jdbc:mysql://localhost:3306/gymj
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.show-sql=true
