--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,11 @@
 spring.application.name=Gym-J
 
-spring.datasource.url=jdbc:mysql://localhost:3306/fitnessdb?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=1234
+spring.datasource.url=jdbc:mysql://localhost:3306/gymj
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# Lad Spring selv finde driver-klassen (vi fjerner den manuelt satte)
-# spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
+
 spring.jpa.show-sql=true
-
-# VIGTIGT: korrekt dialect til Hibernate 6
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-
-server.port=8080
