--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.application.name=Gym-J
 
-spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.username=jens
+spring.datasource.password=x
 spring.datasource.url=jdbc:mysql://localhost:3306/gymj
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
